metadatadeploy/objects/Contact.object
<CustomObject>
    <fields>
        
    <fullName>Credential__c</fullName>
        
    <description>Type of credential, only available for practitioners</description>
        
        
    <label>Credential</label>
        
    <length>255</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>IdP_Id__c</fullName>
        
        
    <description>External Id tied to the user&apos;s IdP Account (Okta Id)</description>
        
    <externalId>true</externalId>
        
    <label>IdP Id</label>
        
    <length>255</length>
        
        
        
    <type>Text</type>
        
    <unique>true</unique>
        
</fields>
    <fields>
        
    <fullName>NPI__c</fullName>
        
        
    <label>NPI</label>
        
    <length>10</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Registration_Status__c</fullName>
        
        
    <label>Registration Status</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>Needs Info</fullName>
                    
                    
                <label>Needs Info</label>
                    
            </value>
                
            <value>
                    
                <fullName>Started</fullName>
                    
                    
                <label>Started</label>
                    
            </value>
                
            <value>
                    
                <fullName>Completed</fullName>
                    
                    
                <label>Completed</label>
                    
            </value>
                
            <value>
                    
                <fullName>Cancelled</fullName>
                    
                    
                <label>Cancelled</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>Roles__c</fullName>
        
        
    <label>Roles</label>
        
        
        
    <type>MultiselectPicklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>practitioner</fullName>
                    
                    
                <label>practitioner</label>
                    
            </value>
                
            <value>
                    
                <fullName>organization-admin</fullName>
                    
                    
                <label>organization-admin</label>
                    
            </value>
                
            <value>
                    
                <fullName>staff</fullName>
                    
                    
                <label>staff</label>
                    
            </value>
                
            <value>
                    
                <fullName>biller</fullName>
                    
                    
                <label>biller</label>
                    
            </value>
                
            <value>
                    
                <fullName>monitor</fullName>
                    
                    
                <label>monitor</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
        
</fields>
    <fields>
        
    <fullName>TOC_Accepted_Date__c</fullName>
        
        
    <label>TOC Accepted Date</label>
        
        
        
    <type>DateTime</type>
        
</fields>
    <fields>
        
    <fullName>User_Status__c</fullName>
        
    <description>User&apos;s Okta status, should only be updated via Clover Assistant or Okta</description>
        
        
    <label>User Status</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>STAGED</fullName>
                    
                    
                <label>STAGED</label>
                    
            </value>
                
            <value>
                    
                <fullName>PROVISIONED</fullName>
                    
                    
                <label>PROVISIONED</label>
                    
            </value>
                
            <value>
                    
                <fullName>ACTIVE</fullName>
                    
                    
                <label>ACTIVE</label>
                    
            </value>
                
            <value>
                    
                <fullName>PASSWORD_EXPIRED</fullName>
                    
                    
                <label>PASSWORD_EXPIRED</label>
                    
            </value>
                
            <value>
                    
                <fullName>LOCKED_OUT</fullName>
                    
                    
                <label>LOCKED_OUT</label>
                    
            </value>
                
            <value>
                    
                <fullName>RECOVERY</fullName>
                    
                    
                <label>RECOVERY</label>
                    
            </value>
                
            <value>
                    
                <fullName>SUSPENDED</fullName>
                    
                    
                <label>SUSPENDED</label>
                    
            </value>
                
            <value>
                    
                <fullName>DEPROVISIONED</fullName>
                    
                    
                <label>DEPROVISIONED</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <recordTypes>
        
    <fullName>HealthCloudGA__IndustriesIndividual</fullName>
        
    <active>true</active>
        
    <description>Represents an Individual</description>
        
    <label>Individual</label>
        
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>Practitioner</fullName>
        
    <active>true</active>
        
    <label>Practitioner</label>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>Staff</fullName>
        
    <active>true</active>
        
    <label>Staff</label>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <listViews>
        
    <fullName>All_Practitioners</fullName>
        
    <columns>FULL_NAME</columns>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>CONTACT.PHONE1</columns>
        
    <columns>CONTACT.EMAIL</columns>
        
    <columns>NPI__c</columns>
        
    <columns>User_Status__c</columns>
        
    <columns>CORE.USERS.ALIAS</columns>
        
    <filterScope>Everything</filterScope>
        
    <filters>
            
        <field>CONTACT.RECORDTYPE</field>
            
        <operation>equals</operation>
            
        <value>Contact.Practitioner</value>
            
    </filters>
        
    <label>All Practitioners</label>
        
</listViews>
    <listViews>
        
    <fullName>Org_Contact_Hierarchy</fullName>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>ACCOUNT.OWNER.ALIAS</columns>
        
    <columns>CONTACT.TITLE</columns>
        
    <filterScope>Everything</filterScope>
        
    <label>Org_Contact_Hierarchy</label>
        
</listViews>
</CustomObject>